products/pdt/cd/base/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: pdt
  namespace: pdt
  labels:
    "app.kubernetes.io/name": "pdt"
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
      protocol: TCP
      name: http
  selector:
    "app.kubernetes.io/name": "pdt"
