products/pdt/cd/base/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pdt
  namespace: pdt
  labels:
    "app.kubernetes.io/name": "pdt"
spec:
  rules:
    - host: localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pdt
                port:
                  number: 80
    - host: pdt.zilliqa.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: devex
                port:
                  number: 80
